--- a/index.html
+++ b/index.html
@@ -41,15 +41,18 @@
 
 		</span>
 	</div>
-	<div class="makes"> 
-		<select name="make-selction">
-			<option value="makes" class="select">Select All Brands</option>
-		</select>
-	</div>
 
-	<div class="colors">
-		<select name="color-selction">
-			<option value="colorr" class="select">Select All Colors</option>
+	<h2 class=" cBeige">Car Filter</h2>
+	
+    <div class="makeValues"> 
+		<select name="make-selction" class="make-selction">
+			<!-- <option value="makes" class="selects">Select All Brands</option> -->
+		</select>
+
+</div>
+	<div class="colorValues">
+		<select name="color-selction" class="color-selection">
+			<!-- <option value="colorr" class="select">Select All Colors</option> -->
 		</select>
 	</div>
 
@@ -57,21 +60,21 @@
 		<input type="submit" value="Show Car List" class="filter" name="filter">
 	</div>
 
-	<!-- <div>
+	<div class="brown">
 		<table>
-			<tr>
-				<th>Color</th>
+			<table class="th">
 				<th>Make</th>
 				<th>Model</th>
+				<th>Color</th>
+				<th>Price (R)</th>
 				<th>Registration</th>
-				<th>Price</th>
-			</tr>
-			<tr class="widgets">
+		</table>
+			<span class="widgetsResults">
 			
-			</tr>
+			</span>
 			</table>
-	</div> -->
-	
+	</div>
+<!-- <a class="burlywood filter " href="./filter.html">Filter Cars</a> -->
 	<script src="index.js"></script>
 
 </body>
